--- a/src/app/challenges/challenge-list/challenge-list.html
+++ b/src/app/challenges/challenge-list/challenge-list.html
@@ -46,7 +46,7 @@
         </span>
       </div>
       
-      <p class="description">{{ challenge.description | truncate:150 }}</p>
+      <p class="description">{{ challenge.description  }}</p>
       
       <div class="card-footer">
         <div class="dates">
