--- a/src/app/components/shared/footer/footer.html
+++ b/src/app/components/shared/footer/footer.html
@@ -1,1 +1,28 @@
-<p>footer works!</p>
+<footer class="bg-dark text-white py-4 mt-auto">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h5>ByteBattle</h5>
+        <p>Plataforma competitiva de programación con premios en efectivo.</p>
+      </div>
+      <div class="col-md-3">
+        <h5>Enlaces</h5>
+        <ul class="list-unstyled">
+          <li><a routerLink="/" class="text-white">Inicio</a></li>
+          <li><a routerLink="/challenges" class="text-white">Retos</a></li>
+          <li><a routerLink="#" class="text-white">Términos y Condiciones</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h5>Contacto</h5>
+        <ul class="list-unstyled">
+          <li>support@bytebattle.com</li>
+          <li>Twitter: @bytebattle</li>
+        </ul>
+      </div>
+    </div>
+    <div class="text-center mt-3">
+      <p>&copy; {{ currentYear }} ByteBattle. Todos los derechos reservados.</p>
+    </div>
+  </div>
+</footer>
