ya se supone copila aho a adecuar interfaz y funcinalidad

--- a/src/app/components/shared/footer/footer.html
+++ b/src/app/components/shared/footer/footer.html
@@ -10,14 +10,16 @@
         <ul class="list-unstyled">
           <li><a routerLink="/" class="text-white">Inicio</a></li>
           <li><a routerLink="/challenges" class="text-white">Retos</a></li>
-          <li><a routerLink="#" class="text-white">Términos y Condiciones</a></li>
+          <li>
+            <a routerLink="#" class="text-white">Términos y Condiciones</a>
+          </li>
         </ul>
       </div>
       <div class="col-md-3">
         <h5>Contacto</h5>
         <ul class="list-unstyled">
-          <li>support@bytebattle.com</li>
-          <li>Twitter: @bytebattle</li>
+          <li>support&#64;bytebattle.com</li>
+          <li>Twitter: &#64;bytebattle</li>
         </ul>
       </div>
     </div>
