ya tiene stylos y va tomando forma

--- a/src/app/components/shared/footer/footer.scss
+++ b/src/app/components/shared/footer/footer.scss
@@ -1,8 +1,10 @@
 footer {
   a {
-    text-decoration: none;
+    display: inline-block;
+    transition: transform 0.3s ease;
+    
     &:hover {
-      text-decoration: underline;
+      transform: translateX(5px);
     }
   }
 }
