--- a/src/app/components/shared/footer/footer.html
+++ b/src/app/components/shared/footer/footer.html
@@ -1,25 +1,30 @@
-<footer class="bg-dark text-white py-4 mt-auto">
+<footer class="py-4 mt-auto">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-4 mb-4">
         <h5>ByteBattle</h5>
         <p>Plataforma competitiva de programación con premios en efectivo.</p>
+        <div class="d-flex mt-3">
+          <a href="#" class="me-3"><i class="bi bi-twitter"></i></a>
+          <a href="#" class="me-3"><i class="bi bi-github"></i></a>
+          <a href="#"><i class="bi bi-discord"></i></a>
+        </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4 mb-4">
         <h5>Enlaces</h5>
         <ul class="list-unstyled">
           <li><a routerLink="/" class="text-white">Inicio</a></li>
           <li><a routerLink="/challenges" class="text-white">Retos</a></li>
-          <li>
-            <a routerLink="#" class="text-white">Términos y Condiciones</a>
-          </li>
+          <li><a routerLink="#" class="text-white">Términos y Condiciones</a></li>
+          <li><a routerLink="#" class="text-white">Política de Privacidad</a></li>
         </ul>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4 mb-4">
         <h5>Contacto</h5>
         <ul class="list-unstyled">
-          <li>support&#64;bytebattle.com</li>
-          <li>Twitter: &#64;bytebattle</li>
+          <li><i class="bi bi-envelope me-2"></i>support&#64;bytebattle.com</li>
+          <li><i class="bi bi-twitter me-2"></i>&#64;bytebattle</li>
+          <li><i class="bi bi-geo-alt me-2"></i>Medellín, Colombia</li>
         </ul>
       </div>
     </div>
