--- a/src/app/components/shared/header/header.html
+++ b/src/app/components/shared/header/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container">
     <a class="navbar-brand" routerLink="/">ByteBattle</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -9,28 +9,37 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/challenges">Retos</a>
         </li>
-        <li class="nav-item" *ngIf="authService.isAdmin()">
-          <a class="nav-link" routerLink="/admin">Admin</a>
-        </li>
+        @if (authService.isAdmin()) {
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/admin">Admin</a>
+          </li>
+        }
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item" *ngIf="!authService.getCurrentUser()">
-          <a class="nav-link" routerLink="/login">Iniciar Sesión</a>
-        </li>
-        <li class="nav-item" *ngIf="!authService.getCurrentUser()">
-          <a class="nav-link" routerLink="/register">Registrarse</a>
-        </li>
-        <li class="nav-item dropdown" *ngIf="authService.getCurrentUser()">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-            {{ authService.getCurrentUser()?.username }}
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" href="#">Perfil</a></li>
-            <li><a class="dropdown-item" href="#">Notificaciones</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" (click)="authService.logout()">Cerrar Sesión</a></li>
-          </ul>
-        </li>
+        @if (!authService.getCurrentUser()) {
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login">Iniciar Sesión</a>
+          </li>
+        }
+        @if (!authService.getCurrentUser()) {
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/register">Registrarse</a>
+          </li>
+        }
+        @if (authService.getCurrentUser()) {
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+              <i class="bi bi-person-circle me-1"></i>
+              {{ authService.getCurrentUser()?.username }}
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" href="#"><i class="bi bi-person me-2"></i>Perfil</a></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-bell me-2"></i>Notificaciones</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" (click)="authService.logout()"><i class="bi bi-box-arrow-right me-2"></i>Cerrar Sesión</a></li>
+            </ul>
+          </li>
+        }
       </ul>
     </div>
   </div>
