--- a/src/app/components/shared/header/header.scss
+++ b/src/app/components/shared/header/header.scss
@@ -1,5 +1,8 @@
 .navbar {
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 242, 254, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  }
 }
 
 .dropdown-menu {
