--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -35,7 +35,9 @@ Usuario&#64;ByteBattle:~$ Bienvenido, {{ authService.getCurrentUser()?.username 
 
     <div class="card">
       <div class="card-body text-center">
-        <h3 class="card-title text-warning">${{ stats.earnings | number }}</h3>
+        <h3 class="card-title text-warning">
+          ${{ stats.earnings | number:'1.0-0' }}
+        </h3>
         <p class="card-text">Ganancias totales</p>
       </div>
     </div>
@@ -60,7 +62,9 @@ Usuario&#64;ByteBattle:~$ Bienvenido, {{ authService.getCurrentUser()?.username 
               <small class="d-block"
                 >Premio: ${{ challenge.totalPot | number }}</small
               >
-              <small>Finaliza: {{ challenge.endDate | date }}</small>
+              <small
+                >Finaliza: {{ challenge.endDate | date:'dd/MM/yyyy' }}</small
+              >
             </div>
             <button
               class="btn btn-sm btn-outline-primary"
@@ -95,10 +99,11 @@ Usuario&#64;ByteBattle:~$ Bienvenido, {{ authService.getCurrentUser()?.username 
             {{ challenge.description | truncate:100 }}
           </p>
           <div class="mt-3">
-            <small class="d-block"
-              >Inicio: {{ challenge.startDate | date }}</small
+            <small>Inicio: {{ challenge.startDate | date:'dd/MM/yyyy' }}</small>
+
+            <small
+              >Costo: ${{ challenge.participationCost | number:'1.0-0' }}</small
             >
-            <small>Costo: ${{ challenge.participationCost | number }}</small>
           </div>
         </div>
       </div>
